# plugin

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/plugin/: AXRAPI.cpp  AXRAPI.h  AXRPlugin.cpp  AXRPlugin.h  Factory.cpp  PluginConfig.cmake
src/plugin/xpi/content/: install.rdf
